--- a/src/Main/Main.css
+++ b/src/Main/Main.css
@@ -12,20 +12,17 @@
     border-radius: 10px;
     border-bottom-left-radius: 0px;
     border-bottom-right-radius: 0px;
-    box-shadow: 5px 5px 5px rgb(116, 116, 116);;
 }
 .main  .core-network{
-    height: 940px;
-    width: 520px;
+    height: 930px;
+    width: 490px;
     background-color: #F9ABAB;
 }
 .main .core-network .docker{
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
-    justify-content: center;
-    box-shadow: 0 0 0;
-    
+    justify-content: center;  
 }
 .docker .cont1{
     height:120px;
@@ -37,7 +34,9 @@
     background-color: #F1F1F1;
     border-bottom-left-radius:10px;
     border-bottom-right-radius:10px;
-    box-shadow: 0 0 0;
+}
+.docker .cont1 .ausf-svg{
+    margin:20px 0;
 }
 .docker .cont2{
     padding: 5px;
@@ -49,7 +48,15 @@
     background-color: #F1F1F1;
     border-bottom-left-radius:10px;
     border-bottom-right-radius:10px;
-    box-shadow: 0 0 0;
+}
+.docker .logo-nrf{
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    margin-top: 16px;
+}
+.logo-nrf .nrf-img{
+    width: 52px;
 }
 .docker .cont3{
     padding: 5px;
@@ -61,7 +68,18 @@
     background-color: #F1F1F1;
     border-bottom-left-radius:10px;
     border-bottom-right-radius:10px;
-    box-shadow: 0 0 0;
+}
+.docker .logo-net{
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    margin-top: 22px;
+}
+.logo-net .udm-img{
+    width: 52px;
+}
+.logo-net .udr-img{
+    width: 52px;
 }
 .docker .cont4{
     padding: 5px;
@@ -73,7 +91,6 @@
     background-color: #F1F1F1;
     border-bottom-left-radius:10px;
     border-bottom-right-radius:10px;
-    box-shadow: 0 0 0;
 }
 .docker .cont5{
     padding: 5px;
@@ -85,7 +102,9 @@
     background-color: #F1F1F1;
     border-bottom-left-radius:10px;
     border-bottom-right-radius:10px;
-    box-shadow: 0 0 0;
+}
+.docker .cont5 .smf-svg{
+    margin:15px 0;
 }
 .docker .cont6{
     padding: 5px;
@@ -97,9 +116,10 @@
     background-color: #F1F1F1;
     border-bottom-left-radius:10px;
     border-bottom-right-radius:10px;
-    box-shadow: 0 0 0;
 }
-
+.docker .cont6 .amf-svg{
+    margin:18px 0;
+}
 .docker .cont7{
     padding: 5px;
     color: #202020;
@@ -110,94 +130,122 @@
     background-color: #F1F1F1;
     border-bottom-left-radius:10px;
     border-bottom-right-radius:10px;
-    box-shadow: 0 0 0;
+}
+.docker .cont7 .upf-svg{
+    margin:10px 0;
 }
 .play{
     height: 60px;
     width: 200px;
-    background-color: white;
+    background-color: rgb(216, 253, 218);
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
     border-radius: 10px;
     margin: 98px 158px;
-    box-shadow: 0 0 0;
-    transition: 0.3s ease;
+    transition: 0.2s ease;
+}
+.play .iconp1{
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+}
+.play .iconp1:hover{
+    scale: 1;
+
 }
 .play:hover{
-    scale: 1.01;
+    scale: 1.05;
     cursor: pointer;
 }
-
 .main .ng-ran{
-    height: 940px;
-    width: 384px;
+    height: 930px;
+    width: 360px;
     background-color: #FEB7A1;
 }
 .ng-ran .base{
     display: flex;
     flex-direction: column;
     justify-content: center;
-    box-shadow: 0 0 0;
+}
+.ng-ran .logo-base{
+    display: flex;
+    margin-top: 10px;
+    flex-direction: row;
+    justify-content: center;
+}
+.ng-ran .logo-base .ran-img{
+   width: 60px;
 }
 .ng-ran .base .station1{
     height: 100px;
     width: 215px;
-    margin:35px 83px;
+    padding: 5px;
+    font-size: 13px;
+    margin:35px 70px;
     background-color: white;
     border-radius: 10px;
-    box-shadow: 0 0 0;
 }
 .ng-ran .base .station2{
     height: 100px;
     width: 215px;
-    margin:25px 83px;
+    padding: 5px;
+    font-size: 13px;
+    margin:25px 70px;
     background-color: white;
     border-radius: 10px;
-    box-shadow: 0 0 0;
 }
 .ng-ran .base .divider{
     height: 5px;
     width: 215px;
-    margin: 0 83px;
+    margin: 0 70px;
     background-color: #525252;
     border-radius: 10px;
-    box-shadow: 0 0 0;
 }
 .ng-ran .base .station3{
     height: 100px;
     width: 215px;
-    margin:35px 83px;
+    padding: 5px;
+    font-size: 13px;
+    margin:35px 70px;
     background-color: white;
     border-radius: 10px;
-    box-shadow: 0 0 0;
 }
 .ng-ran .base .station4{
     height: 100px;
     width: 215px;
-    margin:25px 83px;
+    padding: 5px;
+    font-size: 13px;
+    margin:25px 70px;
     background-color: white;
     border-radius: 10px;
-    box-shadow: 0 0 0;
 }
 .ng-ran .play1{
     height: 60px;
     width: 200px;
-    background-color: white;
+    background-color: rgb(216, 253, 218);
     border-radius: 10px;
-    margin: 92px 95px;
-    box-shadow: 0 0 0;
-    transition: 0.3s ease;
+    margin: 92px 80px;
+    transition: 0.2s ease;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
 }
 .ng-ran .play1:hover{
-    scale: 1.01;
+    scale: 1.05;
     cursor: pointer;
 }
 .main .ues{
-    height: 940px;
-    width: 384px;
+    height: 930px;
+    width: 365px;
     background-color: #C2EFFF;
 }
 .main .packet{
-    height: 940px;
-    width: 485px;
+    height: 930px;
+    width: 530px;
     background-color: #EBEAEA;
 }
 .main * .head{
@@ -206,5 +254,4 @@
     height: 40px;
     background-color: #353434;
     padding: 10px;
-    box-shadow: 0px 0px 0px;
 }
