--- a/src/App.css
+++ b/src/App.css
@@ -6,11 +6,12 @@
   font-family:'Roboto', sans-serif;
 }
 .App{
-    position: relative;
-    display: flex;
-    
-    min-height: 100vh;
-    justify-content: flex-start;
-    align-items: flex-start;
-    
+  position: relative;
+  display: flex;
+  min-height: 100vh;
+  justify-content: flex-start;
+  align-items: flex-start;
+  background-image: url("public/wallpaper/Background.jpg");
+  background-repeat: no-repeat;
+  background-size: cover;
 }
