--- a/src/Components/NaviconTemplate/Nav.css
+++ b/src/Components/NaviconTemplate/Nav.css
@@ -2,17 +2,16 @@
     position: relative;
     display: flex;
     align-items: center;
-    gap: 12px;
-    padding: 12px 20px;
+    padding: 1vh 0.8vw;
     border-radius: 10px;
     overflow: hidden;
     cursor: pointer;
-    margin: 15px 0px;
+    margin: 2vh 0px;
     transition: background-color .2s ease;
 }
 .nav:hover{
     background-color: rgba(255,255,255,0.158);
 }
 .icon{
-    font-size: 25px;
+    font-size: 2.5vh;
 }
