--- a/src/Components/NavigationTemplate/Navigation.css
+++ b/src/Components/NavigationTemplate/Navigation.css
@@ -6,10 +6,9 @@
     height: 100vh;
     background-color: rgb(9, 15, 32);
     color: white;
-    width: 12vh;
+    width: 6vw;
     display: flex;
     flex-direction: column;
     align-items: center;
     overflow: hidden;
-    
 }
